--- a/adstroi/index.html
+++ b/adstroi/index.html
@@ -32,32 +32,79 @@
 
 
 	<header class="site-header" style="background-image: url(img/bgr.png);">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4 col-sm-4 col-xs-5">
-					<div class="number-top">
-						+7-904-574-57-87
+		<div class="con-top">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4 col-sm-4 hidden-xs">
+						<div class="time-work">
+							<p>График работы: Пн-Пт: 10.00-17.30</p>
+						</div>
 					</div>
-				</div>
-				<div class="col-md-4 col-sm-4 col-xs-2">
-					<div class="logo">
-						<img src="img/logo.PNG" alt="">
+					<!-- 					mobile ver 								-->
+<!-- 					<div class="col-xs-4 hidden-sm">
+						<div class="time-work">
+							<p>График работы: <br> Пн-Пт: 10.00-17.30</p>
+						</div>
+					</div> -->
+					<div class="col-md-5 col-sm-5 hidden-xs">
+						<div class="number-phone">
+							<p>8-3842-77-40-67, 8-904-574-57-87</p>
+						</div>
 					</div>
-				</div>
-				<div class="col-md-4 col-sm-4 col-xs-5">
-					<div class="callback_button">
-						<a href="#callback" class="popup-with-zoom-anim">Обратная связь</a>
+					<!-- 					mobile ver 								-->
+<!-- 					<div class="col-xs-4 hidden-sm">
+						<div class="number-phone">
+							<p>8-3842-77-40-67<br> 8-904-574-57-87</p>
+						</div>
+					</div> -->
+					<div class="col-md-3 col-sm-3 hidden-xs">
+						<div class="link_top">
+							<p>
+								<ul>
+									<li><a href="https://vk.com/ad_stroy2005"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+									<li><a href="https://ok.ru/profile/585690641432"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a></li>
+									<li><a href="https://twitter.com/search?q=%40ADS_Stroy2005&src=typd"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+								</ul>
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>	
-		<hr>
+		</div>
+		<div class="con-top-two">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-1 col-sm-1 col-xs-2">
+						<div class="logo">
+							<p><img src="img/logo.PNG" alt=""></p>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-4 col-xs-9">
+						<div class="word-logo">
+							<p>DESIGN AGENCY</p>
+							<p class="custom-p"><span>Best designs & quality work</span></p>
+						</div>
+					</div>
+					<div class="col-md-7 col-sm-7 hidden-xs">
+						<div class="button-call-top">
+							<p><a href="#callback" class="popup-with-zoom-anim">Заказать звонок</a></p>
+						</div>
+					</div>
+					<div class="col-xs-12 hidden-sm hidden-md hidden-lg">
+						<div class="number-mob-ver">
+							8-904-574-57-87
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 col-xs-12">
 					<div class="name-top bounceInLeft animated">
-						ADStroy
+						AD-Stroy
 					</div>
 				</div>
 				<div class="col-md-12 col-xs-12">
@@ -67,7 +114,7 @@
 				</div>
 				<div class="col-md-12 col-xs-12">
 					<div class="button-works bounceIn animated">
-						<a href="#works"><img src="img/icon-play.PNG" alt="">Показать все работы</a>
+						<a href="#works" class="smoothscroll"><img src="img/icon-play.PNG" alt="">Показать все работы</a>
 					</div>
 				</div>
 			</div>
@@ -78,7 +125,7 @@
 		<div class="content_banner">
 			Дизайн - проектирование
 			<div class="arrow">
-				<a href="#disign"><img src="img/arrow.PNG" alt=""></a>
+				<a href="#disign" class="smoothscroll"><img src="img/arrow.PNG" alt=""></a>
 			</div>
 		</div>
 		<div class="line" style="background-image: url(img/line.PNG)"></div>
@@ -102,8 +149,8 @@
 			</div>
 			<div class="row">
 				<div class="col-md-8 col-sm-10">
-					<div class="title-styles">
-						Мы предлогаем!
+					<div id="works" class="title-styles">
+						Наши услуги
 					</div>
 				</div>
 			</div>
@@ -111,8 +158,8 @@
 				<div class="col-md-6 col-sm-9 col-sm-offset-1 col-md-offset-1">
 					<div class="styles">
 						<ul>
-							<li class="bounceInRight wow"><img src="img/23809.png" alt="">Современные стили</li>
-							<li class="bounceInRight wow" data-wow-delay=".2s"><img src="img/german_house1600.png" alt="">Исторические стили</li>
+							<li class="bounceInRight wow"><img src="img/23809.png" alt="">Разработка в современном стиле</li>
+							<li class="bounceInRight wow" data-wow-delay=".2s"><img src="img/german_house1600.png" alt="">Разработка в историческом стиле</li>
 							<li class="bounceInRight wow" data-wow-delay=".3s"><img src="img/geometrie.png" alt="">Перепланировка,  Согласование помещений</li>
 						</ul>
 					</div>
@@ -121,7 +168,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="slogan-top slideInDown animated">
-						Доступность цен на дома – один из основных принципов нашей работы!
+						Доступность цен – один из основных принципов нашей работы!
 					</div> 
 				</div>
 			</div>
@@ -131,12 +178,105 @@
 		</div>
 	</div>
 
+	<div class="info-block" style="background-image: url(img/Desk.jpg)">
+		<div class="overlay-info">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="info-wrapper">
+							<h2>Процесс работы</h2>
+						</div>
+						<div class="separator">
+							<span>
+								<div class="i fa fa-circle"></div>
+							</span>
+						</div>
+					</div>
+					<div class="col-md-12">
+						<div class="info-circle">
+							<div id="info-steps" class="info-steps">
+								<ul>
+									<li class="active" onclick="go_con(1);">
+										<span>Встреча</span>
+										<div class="v-border hidden-xs"></div>
+									</li>
+									<li onclick="go_con(2);">
+										<span>Идея</span>
+										<div class="v-border hidden-xs"></div>
+									</li>
+									<li onclick="go_con(3);">
+										<span>Визуализация</span>
+										<div class="v-border hidden-xs"></div>
+									</li>
+									<li onclick="go_con(4);">
+										<span>Рабочий проект</span>
+										<div class="v-border hidden-xs"></div>
+									</li>
+									<li onclick="go_con(5);">
+										<span>Комплектация</span>
+										<div class="v-border hidden-xs"></div>
+									</li>
+								</ul>
+							</div>
+							<div class="info-con">
+								<div id="tab" style="display: block;">
+									<p>Встреча и подписание договора: мы рады видеть вас в нашем офисе. Наш дизайнер проводит бесплатную консультацию при первой встрече. После подписания договора наш специалист выезжает на объект для проведения замеров помещения.</p>
+								</div>
+								<div id="tab2" style="display: none;">
+									<p>Идея и планировочное решение: составление планировочного решения, 2 отправных варианта и более 10 корректировок до полного согласования с заказчиком. Работаем с субподрядчиками по согласованию планировок.</p>
+								</div>
+								<div id="tab3" style="display: none;">
+									<p>Визуализация проекта: 3D визуализация помещений, можно выборочно по согласованию с клиентом.</p>
+								</div>
+								<div id="tab4" style="display: none;">
+									<p>Рабочий проект: выполнение рабочей документации для строителей. Все планы (потолки, полы, электрика, разрезы и развертки стен и др).</p>
+								</div>
+								<div id="tab5">
+									<p>Комплектация: подбор отделочных материалов, мебели и сантехники.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="info-text">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 col-sm-4">
+					<p class="title-info us-css">Создание дизайн-проекта интерьера</p>
+					<div class="text-column">
+						<p>Заказать создание неповторимого стиля в квартире, коттедже, бутике, офисе или ресторане можно в нашей компании. Специалисты сделают все возможное, чтобы дизайн интерьера полностью соответствовал пожеланиям заказчика. Опыт нашей работы — более 13 лет. Мы знаем, чего хочет клиент!</p>
+						<p>Разработать проект можно удаленно. Для этого заказчик через интернет предоставляет входные данные (техническое задание и план помещения), а мы осуществляем разработку проекта. Возможен выезд на объект по предварительной договоренности.</p>
+						<p>Ознакомиться с нашими работами можно в журналах «Современный дом», «Красивые квартиры», «Домой», «Идеи Вашего дома», «Лучшие интерьеры». Наши специалисты участвуют в телевизионных передачах, например в «Школе ремонта» на ТНТ. У нас можно заказать дизайн-проект интерьера магазина, бара, торгового центра, частных интерьеров и административных зданий. </p>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-4">
+					<p class="title-info">Комплектация объекта аксессуарами, мебелью</p>
+					<div class="text-column">
+						<p>При создании дизайна интерьера по требованию заказчика специалисты готовы провести полную комплектацию объекта мебелью и различными аксессуарами. Отдельно будет составлена полная спецификация дверей, светильников, мебели, подобраны фактуры и текстуры материалов. Мы осуществляем прямые поставки предметов мебели с итальянских фабрик. Благодаря прямым контактам с ведущими производителями мы всегда в курсе новинок. Для отслеживания тенденций в дизайне наши специалисты регулярно посещают выставки мебели в Милане, Париже, Кельне, Лондоне.</p>
+						<p>Работая с нами, вы сэкономите денежные средства и сможете получить уникальный интерьер. Дизайн-проекты, выполненные студией, реализованы не только в России, но и в Арабских Эмиратах, Швейцарии, Чехии.</p>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-4">
+					<p class="title-info us-css">Авторский надзор за ходом работ</p>
+					<div class="text-column">
+						<p>Процесс строительных работ достаточно длительный и всегда требует присутствия заказчика или дизайнера на объекте. Это лицо выступает как центральное звено, которое координирует работу всех субподрядчиков. Чтобы дизайн интерьера в Москве полностью соответствовал проекту, все системы были корректно смонтированы, необходим авторский надзор, который мы предлагаем своим клиентам. Если у заказчика нет времени решать мелкие вопросы, возникающие в ходе строительных работ, то наши специалисты готовы помочь.</p>
+						<p>Авторский надзор представляет собой комплекс мер, способствующих соблюдению авторской идеи в процессе проведения строительных работ. Сюда включается решение вопросов, которые возникают в процессе работы, например поиск оптимальных решений для удешевления проекта, подбор альтернативных комплектующих в магазинах и др.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="foto-block" style="background-image: url(img/HomeWallpaper.jpg)">
 		<div class="overlay-foto">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<div id="works" class="title-service">
+						<div id="design_project" class="title-service">
 							Дизайн - проекты
 						</div>
 						<div class="services">
@@ -171,10 +311,10 @@
 
 <!-- 																																			FOTORAMA END 																						-->
 
-<div class="content_banner">
+<div id="arh_project" class="content_banner">
 	Архитектурное проектирование
 	<div class="arrow">
-		<a href="#section">
+		<a href="#section" class="smoothscroll">
 			<img src="img/arrow.PNG" alt="">
 		</a>
 	</div>
@@ -206,7 +346,7 @@
 			<div class="recon recon-two" style="background-image: url(img/DesHome.jpg)">
 				<div class="overlay">
 					<div class="title-two">
-						Самые доступные цены на дома и качественная работа!
+						Самые доступные цены и качественная работа!
 					</div>
 				</div>
 			</div>
@@ -276,7 +416,7 @@
 				<div class="recon recon-two" style="background-image: url(img/DesHome.jpg)">
 					<div class="overlay">
 						<div class="title-two">
-							Самые доступные цены на дома и качественная работа!
+							Самые доступные цены и качественная работа!
 						</div>
 					</div>
 				</div>
@@ -322,10 +462,10 @@
 </div>
 <!--                                                        END SECTION                                          -->
 <!-- 																											mobile ver end																						-->
-<div class="content_banner">
-	Также мы можем предложить следующие услуги
+<div id="ofther_project" class="content_banner">
+	Так же можем предложить следующие услуги
 	<div class="arrow">
-		<a href="#services">
+		<a href="#services" class="smoothscroll">
 			<img src="img/arrow.PNG" alt="">
 		</a>
 	</div>
@@ -357,7 +497,7 @@
 			<div class="col-md-3 col-sm-3">
 				<div class="add_service_three fadeInDown wow" data-wow-delay=".3s">
 					<div class="add_ic hidden-xs">
-						<img src="img/64.PNG" alt="">
+						<img src="img/65.png" alt="">
 					</div>
 					<div class="add_text">
 						<p><i class="fa fa-check hidden-sm hidden-md hidden-lg" aria-hidden="true"></i>Ландшафтное проектирование</p>
@@ -378,54 +518,93 @@
 	</div>
 </div>
 
+<div class="block-end">
+	<div class="container">
+		<div class="col-md-12 col-sm-12">
+			<h2>Почему выбирают нас?</h2>
+		</div>
+		<div class="col-md-3 col-sm-3">
+			<div class="block-img">
+				<img src="img/1.png" alt="">
+			</div>
+			<div class="block-con">
+				<p>Клиенты из городов России и зарубежья</p>
+			</div>
+		</div>
+		<div class="col-md-3 col-sm-3">
+			<div class="block-img">
+				<img src="img/2.png" alt="">
+			</div>
+			<div class="block-con">
+				<p>Более 500 cозданных интерьеров</p>
+			</div>
+		</div>
+		<div class="col-md-3 col-sm-3">
+			<div class="block-img">
+				<img src="img/3.png" alt="">
+			</div>
+			<div class="block-con">
+				<p>Индивидуальность дизайна</p>
+			</div>
+		</div>
+		<div class="col-md-3 col-sm-3">
+			<div class="block-img">
+				<img src="img/4.png" alt="">
+			</div>
+			<div class="block-con">
+				<p>Доступные и демократичные цены</p>
+			</div>
+		</div>
+	</div>
+</div>
+
 <!-- 																																CONTENT END 																								-->
 
 
 <footer class="main_foot">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-4 col-sm-4 col-xs-12">
+			<div class="col-md-3 col-sm-3 col-xs-12">
 				<div class="org">
 					<div class="title-org">
 						ооо салон
 					</div>
 					<div class="name-org">
-						adstroi
+						ad-stroi
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4 col-sm-4 col-xs-12">
+			<div class="col-md-5 col-sm-5 col-xs-12">
 				<div class="timetable">
-					<h4>График работы</h4>
-					<p>пн-чт с 9 - 17:30</p>
-					<p>пт с 9 - 16:00</p>
-					<h4>Адрес</h4>
-					<p>650014, г.Кемерово, пр. Шахтеров, дом 123- офис 371</p>
+					<h4>Контакты</h4>
+					<p>Адрес 650014, г.Кемерово, пр. Шахтеров, дом 123- офис 371</p>
+					<p>Телефон 8-3842-77-40-67, 8-904-574-57-87</p>
+					<p>График работы пн-пт с 10.00 - 17:30</p>
+					<p>e-mail ADS-Stroy2005@yandex.ru</p>
 				</div>
 			</div>
-			<div class="col-md-4 col-sm-4 col-xs-12">
-				<div class="contacts">
-					<h4>Телефон</h4>
-					<p>8-3842-77-40-67</p>
-					<p>8-904-574-57-87</p>
-					<p>8-904-574-57-88</p>
+			<div class="col-md-3 col-md-offset-1 col-sm-4 col-xs-12">
+				<div class="callback_button_bot">
+					<a href="#callback" class="popup-with-zoom-anim">Заказать звонок</a>
+				</div>
+				<div class="menu_bot hidden-xs">
+					<ul>
+						<li><a href="#works" class="smoothscroll">Наши услуги</a></li>
+						<li><a href="#design_project" class="smoothscroll">Дизайн-проекты</a></li>
+						<li><a href="#arh_project" class="smoothscroll">Архитектурное проектирование</a></li>
+						<li><a href="#ofther_project" class="smoothscroll">Другие услуги</a></li>
+					</ul>
+				</div>
+				<div class="link-bot-mob hidden-sm hidden-md hidden-lg">
+						<ul>
+							<li><a href="https://vk.com/ad_stroy2005"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+							<li><a href="https://ok.ru/profile/585690641432"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a></li>
+							<li><a href="https://twitter.com/search?q=%40ADS_Stroy2005&src=typd"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+						</ul>
 				</div>
 			</div>
 		</div>
 	</div>
-	<hr class="line-bottom">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 col-sm-12">
-				<div class="links">
-					<a href="https://vk.com/ad_stroy2005"><i class="fa fa-vk" aria-hidden="true"></i></a>
-					<a href="https://ok.ru/profile/585690641432"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a>
-					<a href="https://twitter.com/search?q=%40ADS_Stroy2005&src=typd"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-				</div>
-			</div>
-		</div>
-	</div>
-
 
 </footer>
 
