--- a/adstroi/index.html
+++ b/adstroi/index.html
@@ -183,7 +183,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<div class="info-wrapper">
+						<div class="info-wrapper bounceInDown wow">
 							<h2>Процесс работы</h2>
 						</div>
 						<div class="separator">
@@ -196,23 +196,23 @@
 						<div class="info-circle">
 							<div id="info-steps" class="info-steps">
 								<ul>
-									<li class="active" onclick="go_con(1);">
+									<li class="fadeIn wow active" onclick="go_con(1);">
 										<span>Встреча</span>
 										<div class="v-border hidden-xs"></div>
 									</li>
-									<li onclick="go_con(2);">
+									<li class="fadeIn wow" data-wow-delay=".3s" onclick="go_con(2);">
 										<span>Идея</span>
 										<div class="v-border hidden-xs"></div>
 									</li>
-									<li onclick="go_con(3);">
+									<li class="fadeIn wow" data-wow-delay=".4s" onclick="go_con(3);">
 										<span>Визуализация</span>
 										<div class="v-border hidden-xs"></div>
 									</li>
-									<li onclick="go_con(4);">
+									<li class="fadeIn wow" data-wow-delay=".5s" onclick="go_con(4);">
 										<span>Рабочий проект</span>
 										<div class="v-border hidden-xs"></div>
 									</li>
-									<li onclick="go_con(5);">
+									<li class="fadeIn wow" data-wow-delay=".6s" onclick="go_con(5);">
 										<span>Комплектация</span>
 										<div class="v-border hidden-xs"></div>
 									</li>
@@ -245,7 +245,7 @@
 	<div class="info-text">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4 col-sm-4">
+				<div class="col-md-4 col-sm-4 slideInLeft wow">
 					<p class="title-info us-css">Создание дизайн-проекта интерьера</p>
 					<div class="text-column">
 						<p>Заказать создание неповторимого стиля в квартире, коттедже, бутике, офисе или ресторане можно в нашей компании. Специалисты сделают все возможное, чтобы дизайн интерьера полностью соответствовал пожеланиям заказчика. Опыт нашей работы — более 13 лет. Мы знаем, чего хочет клиент!</p>
@@ -253,14 +253,14 @@
 						<p>Ознакомиться с нашими работами можно в журналах «Современный дом», «Красивые квартиры», «Домой», «Идеи Вашего дома», «Лучшие интерьеры». Наши специалисты участвуют в телевизионных передачах, например в «Школе ремонта» на ТНТ. У нас можно заказать дизайн-проект интерьера магазина, бара, торгового центра, частных интерьеров и административных зданий. </p>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-4">
+				<div class="col-md-4 col-sm-4 slideInUp wow">
 					<p class="title-info">Комплектация объекта аксессуарами, мебелью</p>
 					<div class="text-column">
 						<p>При создании дизайна интерьера по требованию заказчика специалисты готовы провести полную комплектацию объекта мебелью и различными аксессуарами. Отдельно будет составлена полная спецификация дверей, светильников, мебели, подобраны фактуры и текстуры материалов. Мы осуществляем прямые поставки предметов мебели с итальянских фабрик. Благодаря прямым контактам с ведущими производителями мы всегда в курсе новинок. Для отслеживания тенденций в дизайне наши специалисты регулярно посещают выставки мебели в Милане, Париже, Кельне, Лондоне.</p>
 						<p>Работая с нами, вы сэкономите денежные средства и сможете получить уникальный интерьер. Дизайн-проекты, выполненные студией, реализованы не только в России, но и в Арабских Эмиратах, Швейцарии, Чехии.</p>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-4">
+				<div class="col-md-4 col-sm-4 slideInRight wow">
 					<p class="title-info us-css">Авторский надзор за ходом работ</p>
 					<div class="text-column">
 						<p>Процесс строительных работ достаточно длительный и всегда требует присутствия заказчика или дизайнера на объекте. Это лицо выступает как центральное звено, которое координирует работу всех субподрядчиков. Чтобы дизайн интерьера в Москве полностью соответствовал проекту, все системы были корректно смонтированы, необходим авторский надзор, который мы предлагаем своим клиентам. Если у заказчика нет времени решать мелкие вопросы, возникающие в ходе строительных работ, то наши специалисты готовы помочь.</p>
@@ -523,7 +523,7 @@
 		<div class="col-md-12 col-sm-12">
 			<h2>Почему выбирают нас?</h2>
 		</div>
-		<div class="col-md-3 col-sm-3">
+		<div class="col-md-3 col-sm-3 fadeIn wow">
 			<div class="block-img">
 				<img src="img/1.png" alt="">
 			</div>
@@ -531,7 +531,7 @@
 				<p>Клиенты из городов России и зарубежья</p>
 			</div>
 		</div>
-		<div class="col-md-3 col-sm-3">
+		<div class="col-md-3 col-sm-3 fadeIn wow" data-wow-delay=".3s">
 			<div class="block-img">
 				<img src="img/2.png" alt="">
 			</div>
@@ -539,7 +539,7 @@
 				<p>Более 500 cозданных интерьеров</p>
 			</div>
 		</div>
-		<div class="col-md-3 col-sm-3">
+		<div class="col-md-3 col-sm-3 fadeIn wow" data-wow-delay=".4s">
 			<div class="block-img">
 				<img src="img/3.png" alt="">
 			</div>
@@ -547,7 +547,7 @@
 				<p>Индивидуальность дизайна</p>
 			</div>
 		</div>
-		<div class="col-md-3 col-sm-3">
+		<div class="col-md-3 col-sm-3 fadeIn wow" data-wow-delay=".5s">
 			<div class="block-img">
 				<img src="img/4.png" alt="">
 			</div>
