--- a/adstroi/index.html
+++ b/adstroi/index.html
@@ -37,26 +37,14 @@
 				<div class="row">
 					<div class="col-md-4 col-sm-4 hidden-xs">
 						<div class="time-work">
-							<p>График работы: Пн-Пт: 10.00-17.30</p>
+							<p>График работы: Пн-Чт: 10.00-17.30<br> <span>Пт: 10.00 - 16.00</span></p>
 						</div>
 					</div>
-					<!-- 					mobile ver 								-->
-<!-- 					<div class="col-xs-4 hidden-sm">
-						<div class="time-work">
-							<p>График работы: <br> Пн-Пт: 10.00-17.30</p>
-						</div>
-					</div> -->
 					<div class="col-md-5 col-sm-5 hidden-xs">
 						<div class="number-phone">
-							<p>8-3842-77-40-67, 8-904-574-57-87</p>
+							<p>8-3842-77-40-67, 8-904-574-57-87, 8-904-574-57-88</p>
 						</div>
 					</div>
-					<!-- 					mobile ver 								-->
-<!-- 					<div class="col-xs-4 hidden-sm">
-						<div class="number-phone">
-							<p>8-3842-77-40-67<br> 8-904-574-57-87</p>
-						</div>
-					</div> -->
 					<div class="col-md-3 col-sm-3 hidden-xs">
 						<div class="link_top">
 							<p>
@@ -74,15 +62,15 @@
 		<div class="con-top-two">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-1 col-sm-1 col-xs-2">
+					<div class="col-md-1 col-sm-1 col-xs-3">
 						<div class="logo">
 							<p><img src="img/logo.PNG" alt=""></p>
 						</div>
 					</div>
-					<div class="col-md-4 col-sm-4 col-xs-9">
+					<div class="ol-md-4 col-sm-4 col-xs-9">
 						<div class="word-logo">
-							<p>DESIGN AGENCY</p>
-							<p class="custom-p"><span>Best designs & quality work</span></p>
+							<p><span class="border-word">ООО"Архитектура,Дизайн,Строительство"</span></p>
+							<p class="custom-p">Best designs & quality work</p>
 						</div>
 					</div>
 					<div class="col-md-7 col-sm-7 hidden-xs">
@@ -250,20 +238,20 @@
 					<div class="text-column">
 						<p>Заказать создание неповторимого стиля в квартире, коттедже, бутике, офисе или ресторане можно в нашей компании. Специалисты сделают все возможное, чтобы дизайн интерьера полностью соответствовал пожеланиям заказчика. Опыт нашей работы — более 13 лет. Мы знаем, чего хочет клиент!</p>
 						<p>Разработать проект можно удаленно. Для этого заказчик через интернет предоставляет входные данные (техническое задание и план помещения), а мы осуществляем разработку проекта. Возможен выезд на объект по предварительной договоренности.</p>
-						<p>Ознакомиться с нашими работами можно в журналах «Современный дом», «Красивые квартиры», «Домой», «Идеи Вашего дома», «Лучшие интерьеры». Наши специалисты участвуют в телевизионных передачах, например в «Школе ремонта» на ТНТ. У нас можно заказать дизайн-проект интерьера магазина, бара, торгового центра, частных интерьеров и административных зданий. </p>
+						<p>Ознакомиться с нашими работами можно в cоциальных сетях, таких как twitter, vk.</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 slideInUp wow">
 					<p class="title-info">Комплектация объекта аксессуарами, мебелью</p>
 					<div class="text-column">
-						<p>При создании дизайна интерьера по требованию заказчика специалисты готовы провести полную комплектацию объекта мебелью и различными аксессуарами. Отдельно будет составлена полная спецификация дверей, светильников, мебели, подобраны фактуры и текстуры материалов. Мы осуществляем прямые поставки предметов мебели с итальянских фабрик. Благодаря прямым контактам с ведущими производителями мы всегда в курсе новинок. Для отслеживания тенденций в дизайне наши специалисты регулярно посещают выставки мебели в Милане, Париже, Кельне, Лондоне.</p>
+						<p>При создании дизайна интерьера по требованию заказчика специалисты готовы провести полную комплектацию объекта мебелью и различными аксессуарами. Отдельно будет составлена полная спецификация дверей, светильников, мебели, подобраны фактуры и текстуры материалов.</p>
 						<p>Работая с нами, вы сэкономите денежные средства и сможете получить уникальный интерьер. Дизайн-проекты, выполненные студией, реализованы не только в России, но и в Арабских Эмиратах, Швейцарии, Чехии.</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 slideInRight wow">
 					<p class="title-info us-css">Авторский надзор за ходом работ</p>
 					<div class="text-column">
-						<p>Процесс строительных работ достаточно длительный и всегда требует присутствия заказчика или дизайнера на объекте. Это лицо выступает как центральное звено, которое координирует работу всех субподрядчиков. Чтобы дизайн интерьера в Москве полностью соответствовал проекту, все системы были корректно смонтированы, необходим авторский надзор, который мы предлагаем своим клиентам. Если у заказчика нет времени решать мелкие вопросы, возникающие в ходе строительных работ, то наши специалисты готовы помочь.</p>
+						<p>Процесс строительных работ достаточно длительный и всегда требует присутствия заказчика или дизайнера на объекте. Это лицо выступает как центральное звено, которое координирует работу всех субподрядчиков. Чтобы дизайн интерьера в Кемерово полностью соответствовал проекту, все системы были корректно смонтированы, необходим авторский надзор, который мы предлагаем своим клиентам. Если у заказчика нет времени решать мелкие вопросы, возникающие в ходе строительных работ, то наши специалисты готовы помочь.</p>
 						<p>Авторский надзор представляет собой комплекс мер, способствующих соблюдению авторской идеи в процессе проведения строительных работ. Сюда включается решение вопросов, которые возникают в процессе работы, например поиск оптимальных решений для удешевления проекта, подбор альтернативных комплектующих в магазинах и др.</p>
 					</div>
 				</div>
@@ -528,7 +516,7 @@
 				<img src="img/1.png" alt="">
 			</div>
 			<div class="block-con">
-				<p>Клиенты из городов России и зарубежья</p>
+				<p>Клиенты из городов России</p>
 			</div>
 		</div>
 		<div class="col-md-3 col-sm-3 fadeIn wow" data-wow-delay=".3s">
@@ -536,7 +524,7 @@
 				<img src="img/2.png" alt="">
 			</div>
 			<div class="block-con">
-				<p>Более 500 cозданных интерьеров</p>
+				<p>Более 100 cозданных интерьеров</p>
 			</div>
 		</div>
 		<div class="col-md-3 col-sm-3 fadeIn wow" data-wow-delay=".4s">
@@ -566,11 +554,8 @@
 		<div class="row">
 			<div class="col-md-3 col-sm-3 col-xs-12">
 				<div class="org">
-					<div class="title-org">
-						ооо салон
-					</div>
 					<div class="name-org">
-						ad-stroi
+						ООО "Архитектура, Дизайн, Строительство"
 					</div>
 				</div>
 			</div>
@@ -578,9 +563,9 @@
 				<div class="timetable">
 					<h4>Контакты</h4>
 					<p>Адрес 650014, г.Кемерово, пр. Шахтеров, дом 123- офис 371</p>
-					<p>Телефон 8-3842-77-40-67, 8-904-574-57-87</p>
-					<p>График работы пн-пт с 10.00 - 17:30</p>
-					<p>e-mail ADS-Stroy2005@yandex.ru</p>
+					<p>Телефон 8-3842-77-40-67, 8-904-574-57-87 , 8-904-574-57-88</p>
+					<p>График работы пн-чт с 10.00 - 17:30, пт 10.00 - 16.00</p>
+					<p>e-mail ADS-Stroy2005@ya.ru</p>
 				</div>
 			</div>
 			<div class="col-md-3 col-md-offset-1 col-sm-4 col-xs-12">
