--- a/adstroi/index.html
+++ b/adstroi/index.html
@@ -245,7 +245,7 @@
 					<p class="title-info">Комплектация объекта аксессуарами, мебелью</p>
 					<div class="text-column">
 						<p>При создании дизайна интерьера по требованию заказчика специалисты готовы провести полную комплектацию объекта мебелью и различными аксессуарами. Отдельно будет составлена полная спецификация дверей, светильников, мебели, подобраны фактуры и текстуры материалов.</p>
-						<p>Работая с нами, вы сэкономите денежные средства и сможете получить уникальный интерьер. Дизайн-проекты, выполненные студией, реализованы не только в России, но и в Арабских Эмиратах, Швейцарии, Чехии.</p>
+						<p>Работая с нами, вы сэкономите денежные средства и сможете получить уникальный интерьер. Дизайн-проекты, выполненные студией, реализованы в России.</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 slideInRight wow">
@@ -485,7 +485,7 @@
 			<div class="col-md-3 col-sm-3">
 				<div class="add_service_three fadeInDown wow" data-wow-delay=".3s">
 					<div class="add_ic hidden-xs">
-						<img src="img/65.png" alt="">
+						<img src="img/601.png" alt="">
 					</div>
 					<div class="add_text">
 						<p><i class="fa fa-check hidden-sm hidden-md hidden-lg" aria-hidden="true"></i>Ландшафтное проектирование</p>
